--- a/src/app/projects/components/details-projects/details-projects.component.html
+++ b/src/app/projects/components/details-projects/details-projects.component.html
@@ -7,7 +7,7 @@
     <p><strong>Fecha de Fin:</strong> 12/10/2024</p>
   </div>
   <div class="action-buttons">
-    <button class="btn-view-stories">Ver Historias de Usuario</button>
+    <a routerLink="/userstory" class="btn-view-stories">Ver Historias de Usuario</a>
     <button class="btn-create-story" (click)="openCreateStoryModal()">Crear Nueva Historia</button>
     <button class="btn-update-project" (click)="openModal()">Actualizar Proyecto</button>
   </div>
