--- a/src/app/projects/components/projects/projects.component.html
+++ b/src/app/projects/components/projects/projects.component.html
@@ -11,18 +11,18 @@
     <div class="project-card">
       <h3>{{ project.name }}</h3>
       <p>{{ project.description }}</p>
-      <a class="btn-view-details">Ver detalles</a>
+      <a routerLink="/details-projects" class="btn-view-details"
+        >Ver detalles</a
+      >
     </div>
     }
   </section>
 
   <!-- Modal -->
-  @if (isModalOpen) {
-  <div class="modal-overlay" (click)="closeModal($event)">
-    <div class="modal-container" (click)="$event.stopPropagation()">
+  <div class="modal" [class.show]="isModalOpen" (click)="closeModal($event)">
+    <div class="modal-content" (click)="$event.stopPropagation()">
       <button class="modal-close" (click)="closeModal()">×</button>
       <app-create-projects></app-create-projects>
     </div>
   </div>
-  }
 </div>
