--- a/src/app/user-stories/components/user-stories/user-stories.component.html
+++ b/src/app/user-stories/components/user-stories/user-stories.component.html
@@ -1,18 +1,33 @@
 <div class="user-stories-container">
-    <div class="user-stories-header">
-      <h2>Historias de Usuario</h2>
-      <button class="create-story-btn">Nueva Historia de Usuario</button>
-    </div>
-    <div class="user-stories-list">
-      <div class="user-story-card">
-        <h3>Título de la Historia</h3>
-        <p>Descripción breve de la historia de usuario...</p>
-        <div class="user-story-actions">
-          <button class="edit-story-btn">Editar</button>
-          <button class="delete-story-btn">Eliminar</button>
-        </div>
-      </div>
-      <!-- Repetir esta estructura para cada historia de usuario -->
-    </div>
+  <div class="user-stories-header">
+    <h2>Historias de Usuario</h2>
+    <button class="create-story-btn" (click)="openCreateStoryModal()">Nueva Historia de Usuario</button>
   </div>
-  
+  <div class="user-stories-list">
+    <div class="user-story-card">
+      <h3>Título de la Historia</h3>
+      <p>Descripción breve de la historia de usuario...</p>
+      <div class="user-story-actions">
+        <a routerLink="/ticket" class="edit-story-btn">Ver Tickets</a>
+        <button class="edit-story-btn" (click)="openUpdateStoryModal()">Editar</button>
+      </div>
+    </div>
+    <!-- Repetir esta estructura para cada historia de usuario -->
+  </div>
+</div>
+
+<!-- Modal para crear una nueva historia de usuario -->
+<div class="modal" [class.show]="isCreateStoryModalOpen">
+  <div class="modal-content">
+    <span class="close" (click)="closeCreateStoryModal()">&times;</span>
+    <app-create-user-stories></app-create-user-stories>
+  </div>
+</div>
+
+<!-- Modal para actualizar la historia de usuario -->
+<div class="modal" [class.show]="isUpdateStoryModalOpen">
+  <div class="modal-content">
+    <span class="close" (click)="closeUpdateStoryModal()">&times;</span>
+    <app-update-user-stories></app-update-user-stories>
+  </div>
+</div>
