--- a/src/app/auth/components/sign-up/sign-up.component.html
+++ b/src/app/auth/components/sign-up/sign-up.component.html
@@ -1,37 +1,48 @@
 <div class="sign-up-wrapper">
   <div class="sign-up-container">
     <h2>Crear Cuenta</h2>
-    <form>
+    <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="name">Nombre</label>
-        <input id="name" type="text" placeholder="Nombre completo" class="form-control">
-        <div class="error-message">Nombre es requerido</div>
+        <input id="name" type="text" placeholder="Nombre completo" class="form-control" formControlName="name">
+        <div class="error-message" *ngIf="name?.touched && name?.invalid">
+          Nombre es requerido
+        </div>
       </div>
 
       <div class="form-group">
         <label for="email">Correo Electrónico</label>
-        <input id="email" type="email" placeholder="Correo electrónico" class="form-control">
-        <div class="error-message">Correo electrónico inválido</div>
+        <input id="email" type="email" placeholder="Correo electrónico" class="form-control" formControlName="email">
+        <div class="error-message" *ngIf="email?.touched && email?.invalid">
+          <span *ngIf="email?.errors?.['required']">Correo electrónico es requerido</span>
+          <span *ngIf="email?.errors?.['email']">Correo electrónico inválido</span>
+        </div>
       </div>
 
       <div class="form-group">
         <label for="password">Contraseña</label>
-        <input id="password" type="password" placeholder="Contraseña" class="form-control">
-        <div class="error-message">La contraseña debe tener al menos 6 caracteres</div>
+        <input id="password" type="password" placeholder="Contraseña" class="form-control" formControlName="password">
+        <div class="error-message" *ngIf="password?.touched && password?.invalid">
+          <span *ngIf="password?.errors?.['required']">La contraseña es requerida</span>
+          <span *ngIf="password?.errors?.['minlength']">La contraseña debe tener al menos 8 caracteres</span>
+        </div>
       </div>
 
       <div class="form-group">
         <label for="company">Compañía</label>
-        <select id="company" class="form-control">
+        <select id="company" class="form-control" formControlName="company">
           <option value="">Seleccione una compañía</option>
-          <option value="1">Compañía 1</option>
-          <option value="2">Compañía 2</option>
-          <option value="3">Compañía 3</option>
+          <option *ngFor="let company of companies" [value]="company.id">{{ company.name }}</option>
         </select>
-        <div class="error-message">Seleccione una compañía</div>
+        <div class="error-message" *ngIf="company?.touched && company?.invalid">
+          Seleccione una compañía
+        </div>
       </div>
 
       <button type="submit">Registrar</button>
+      
+      <div *ngIf="successMessage" class="success-message">{{ successMessage }}</div>
+      <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
     </form>
     <div class="login-link">
       <p>¿Ya tienes una cuenta? <a href="#">Inicia sesión</a></p>
