feat(Log Out):Added logout functionality.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,6 +16,7 @@
       <li><a routerLink="/tickets" routerLinkActive="active">Tickets</a></li>
       <li><a routerLink="/companies" routerLinkActive="active">Compañías</a></li>
       <li><a routerLink="/profile" routerLinkActive="active">Perfil</a></li>
+      <li><a href="#" (click)="logout()">Cerrar Sesión</a></li>
     </ul>
   </nav>
   
