--- a/src/app/projects/components/create-projects/create-projects.component.css
+++ b/src/app/projects/components/create-projects/create-projects.component.css
@@ -97,3 +97,41 @@
     font-size: 14px;
   }
 }
+
+/* Estilo aplicado a los campos con errores */
+.form-group.has-error input,
+.form-group.has-error textarea {
+  border-color: #dc3545; /* Rojo */
+}
+
+/* Estilo aplicado a los mensajes de error visibles */
+.form-group.has-error .error-message {
+  color: #dc3545; /* Rojo */
+  font-size: 14px;
+  display: block; /* Mostrar mensaje */
+  margin-top: 5px;
+}
+
+
+/* Estilo general para los mensajes */
+.message {
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 15px;
+  font-size: 16px;
+}
+
+/* Estilo para el mensaje de éxito */
+.success-message {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+}
+
+/* Estilo para el mensaje de error */
+.error-message {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+}
+
