--- a/src/app/projects/components/projects/projects.component.html
+++ b/src/app/projects/components/projects/projects.component.html
@@ -6,19 +6,22 @@
     </button>
     <!-- Barra de búsqueda -->
     <div class="search-bar">
-      <input type="text" placeholder="Buscar proyectos..." >
+      <input
+        type="text"
+        placeholder="Buscar proyectos..."
+        [(ngModel)]="searchTerm"
+        (input)="filterProjects()"
+      />
     </div>
   </header>
 
   <section class="projects-list">
-    @for (project of projects; track $index) {
-    <div class="project-card">
-      <h3>{{ project.name }}</h3>
-      <p>{{ project.description }}</p>
-      <a routerLink="/details-projects" class="btn-view-details"
-        >Ver detalles</a
-      >
-    </div>
+    @for (project of filteredProjects; track $index) {
+      <div class="project-card">
+        <h3>{{ project.name }}</h3>
+        <p>{{ project.description }}</p>
+        <a routerLink="/details-projects" class="btn-view-details">Ver detalles</a>
+      </div>
     }
   </section>
 
@@ -37,9 +40,19 @@
 
   <!-- Botones de paginación -->
   <div class="pagination">
-    <button class="btn-pagination" [disabled]="page === 1" (click)="backPage()">« Anterior</button>
-    <span> Página {{ page }} de {{ totalPage }} de {{ totalElements }} elementos </span>
-    <button class="btn-pagination" [disabled]="page === totalPage" (click)="nextPage()">Siguiente »</button>
+    <button class="btn-pagination" [disabled]="page === 1" (click)="backPage()">
+      « Anterior
+    </button>
+    <span>
+      Página {{ page }} de {{ totalPage }} de {{ totalElements }} elementos
+    </span>
+    <button
+      class="btn-pagination"
+      [disabled]="page === totalPage"
+      (click)="nextPage()"
+    >
+      Siguiente »
+    </button>
   </div>
 
   <!-- Modal -->
